--- a/.github/workflows/starter.yaml
+++ b/.github/workflows/starter.yaml
@@ -15,7 +15,7 @@ jobs:
 # or see the switch on ref_name script below
       environment: ${{ steps.get_environment_from_git_ref.outputs.environment }}
       environment_short: ${{ steps.get_environment_from_git_ref.outputs.environment_short }}
-      image_name: imprint-service
+      image_name: syhd
 # Please note that the next line only works correctly with repositories that don't contain
 # upper case characters. If you have such a repo name please replace ${{ github.repository }}
 # with org/repo-name (all lower case).
