create reverse proxy for geoserver

--- a/000-default.conf
+++ b/000-default.conf
@@ -9,7 +9,16 @@
 
 <VirtualHost *:443>
 
-  SSLEngine on
+  ProxyRequests Off
+  ProxyVia On
+  ProxyPreserveHost Off
+  ProxyTimeout 3600
+  ProxyErrorOverride off
+  SSLProxyEngine on
+  SSLProxyVerify none
+  SSLProxyCheckPeerCN off
+  SSLProxyCheckPeerName off
+  SSLProxyCheckPeerExpire off
   SSLCertificateFile /etc/apache2/ssl/cert.pem
   SSLCertificateKeyFile /etc/apache2/ssl/cert-key.pem
 
@@ -17,5 +26,9 @@
   DocumentRoot /var/www/html
   ErrorLog ${APACHE_LOG_DIR}/error.log
   CustomLog ${APACHE_LOG_DIR}/access.log combined
+
+
+ProxyPass        /geoserver https://geoserver:8443/geoserver timeout=300
+ProxyPassReverse /geoserver https://geoserver:8443/geoserver
 
 </VirtualHost>
